@@ -1,5 +1,11 @@
 2006-03-15  Daniel Jacobowitz  <dan@codesourcery.com>
 
+	* mips-mdebug-tdep.c (compare_pdr_entries): Use bfd_get_signed_32
+	for code addresses.
+	(non_heuristic_proc_desc): Likewise.
+
+2006-03-15  Daniel Jacobowitz  <dan@codesourcery.com>
+
 	* mips-linux-nat.c: Include "gdb_proc_service.h".
 	(PTRACE_GET_THREAD_AREA): Define.
 	(ps_get_thread_area): New.
